--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cooker-me",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "https://nbentoneves.github.io/cook.me",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -15,7 +16,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
